--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
                             <h1>Clean Blog</h1>
-                            <span class="subheading">A Blog Theme by Start Bootstrap</span>
+                            <span class="subheading">¿Qué es lo que tenes que saber?</span>
                         </div>
                     </div>
                 </div>
